--- a/res/layout/activity_home.xml
+++ b/res/layout/activity_home.xml
@@ -35,7 +35,7 @@
         noshufou:activeTextColor="@color/pager_header_active_text_color"
         noshufou:inactiveTextColor="@color/pager_header_inactive_text_color" />
         
-    <com.noshufou.android.su.widget.ViewPagerCompat
+    <android.support.v4.view.ViewPager
         android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
