--- a/res/values-ja/arrays.xml
+++ b/res/values-ja/arrays.xml
@@ -8,7 +8,7 @@
   </string-array>
   <string-array name="pref_status_icon_type_entries">
     <item>ドット</item>
-    <item>顔文字</item>
+    <item>エモアイコン</item>
   </string-array>
   <string-array name="pref_date_format_entries">
     <item>システムのデフォルト</item>
